# engine

./: Cargo.toml
shaders/: depth.frag  light.vert
src/: common.rs  ecs.rs  input.rs  lib.rs  macros.rs  main.rs  renderer.rs  systems.rs  window.rs
src/input/: mod.rs
src/render/: mod.rs  model.rs  shader.rs  systems.rs
src/render/camera/: mod.rs  systems.rs
src/renderer/: camera.rs  mesh.rs  mod.rs  model.rs  shader.rs  systems.rs  utils.rs
src/shaders/: object.frag  object.vert
