[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glutin = "0.30.8"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
winit = "0.28.6"

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",         # Assets management
    "bevy_audio",         # Builtin audio
    "bevy_gilrs",         # Gamepad input support
    "bevy_scene",         # Scenes management
    #"bevy_winit",         # Window management
    #"bevy_render",        # Rendering framework core
    #"bevy_core_pipeline", # Common rendering abstractions
    #"bevy_sprite",        # 2D (sprites) rendering
    #"bevy_pbr",           # 3D (physically-based) rendering
    "bevy_gltf",          # GLTF 3D assets format support
    #"bevy_text",          # Text/font rendering
    #"bevy_ui",            # UI toolkit
    "animation",          # Animation support
    #"tonemapping_luts",   # Support different camera Tonemapping modes (embeds extra data)
    "filesystem_watcher", # Asset hot-reloading
    "x11",                # Linux: Support X11 windowing system
    "android_shared_stdcxx", # For Android builds, use shared C++ library
    "wayland",              # Linux: Support Wayland windowing system
    "dynamic_linking", # Dynamic linking for faster compile-times
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
